--- a/presentation/3-build_systems_a_la_carte.tex
+++ b/presentation/3-build_systems_a_la_carte.tex
@@ -57,7 +57,7 @@
 
   \vspace{1em}
   \begin{tabular}{ l c r }
-  A1: 10 & B1: INDIRECT(``A"\,\&\,C1) & C1: 1 \\
+  A1: 10 & B1: INDIRECT(''A''\,\&\,C1) & C1: 1 \\
   A2: 20 & &
   \end{tabular}
 
