Fix missed titles without macros and title layout

--- a/thesis/4-effects_in_practise.tex
+++ b/thesis/4-effects_in_practise.tex
@@ -26,7 +26,7 @@ Badania nad efektami i uchwytami przyczyniły się także do powstania kilku eks
 
 \lstset{language=Haleff, showstringspaces=false}
 
-Używając właśnie języka Helium zobaczymy, jak w praktyce wygląda programowanie z efektami algebraicznymi oraz uchwytami, zaś w następnym rozdziale spróbujemy zaimplementować wyniki uzyskane w ,,Build systems {\`a} la carte'' \cite{mokhov2018build, mokhov2020build}. Po raz pierwszy Helium pojawia się w \cite{biernacki2019abstracting}, służąc za narzędzie do eksperymentowania i umożliwienia konstrukcji bardziej skomplikowanych przykładów oraz projektów w celu przetestowania efektów i uchwytów w praktyce.
+Używając właśnie języka Helium zobaczymy, jak w praktyce wygląda programowanie z efektami algebraicznymi oraz uchwytami, zaś w następnym rozdziale spróbujemy zaimplementować wyniki uzyskane w \BSaLC\cite{mokhov2018build, mokhov2020build}. Po raz pierwszy Helium pojawia się w \cite{biernacki2019abstracting}, służąc za narzędzie do eksperymentowania i umożliwienia konstrukcji bardziej skomplikowanych przykładów oraz projektów w celu przetestowania efektów i uchwytów w praktyce.
 
 Rozważmy przykład prostego programu napisanego w Helium, w którym definiujemy pomocniczą funkcję \inl{is_negative} ustalającą, czy liczba jest ujemna oraz funkcję \inl{question}, która pyta użytkownika o liczbę i informuje, czy liczba ta jest ujemna:
 
