--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -5,6 +5,10 @@
 
 \usepackage[utf8]{inputenc}
 
+%% Makra dla tytułów, które pojawiają się także w streszczeniu
+\newcommand{\BSaLC}{,,Build systems {\`a} la carte''}
+\newcommand{\BSaLCTP}{,,Build systems {\`a} la carte: Theory and practice''}
+
 %%%%% DANE DO STRONY TYTUŁOWEJ
 % Niezaleznie od jezyka pracy wybranego w opcjach klasy, tytul i streszczenie
 % pracy nalezy podac zarowno w jezyku polskim, jak i angielskim.
@@ -12,10 +16,10 @@
 % zlamaniu wierszy w temacie pracy, zwlaszcza tego w jezyku pracy. Uzyj do tego
 % polecenia \fmlinebreak.
 \polishtitle    {Kwalifikacja i implementacja\fmlinebreak systemów kompilacji z użyciem\fmlinebreak efektów algebraicznych}
-\englishtitle   {Categorization and implementation of build systems using algebraic effects}
-\polishabstract {Efekty algebraiczne i uchwyty to nowe podejście do ujarzmienia efektów ubocznych. Systemy kompilacji, choć są rozbudowanymi i wykorzystującymi skomplikowane algorytmy programami, nie cieszą się zainteresowaniem badaczy. Zmienia się to jednak za sprawą ,,Build systems à la carte'' autorstwa Mokhov'a i innych, którzy podchodzą do tematu systemów kompilacji w sposób abstrakcyjny oraz przedstawiają ich kwalifikację i implementację z użyciem języka programowania Haskell.
+\englishtitle   {Categorization and implementation\fmlinebreak of build systems using\fmlinebreak algebraic effects}
+\polishabstract {Efekty algebraiczne i uchwyty to nowe podejście do ujarzmienia efektów ubocznych. Systemy kompilacji, choć są rozbudowanymi i wykorzystującymi skomplikowane algorytmy programami, nie cieszą się zainteresowaniem badaczy. Zmienia się to jednak za sprawą \BSaLC{} autorstwa Mokhov'a i innych, którzy podchodzą do tematu systemów kompilacji w sposób abstrakcyjny oraz przedstawiają ich kwalifikację i implementację z użyciem języka programowania Haskell.
 Praca w przystępny sposób wprowadza czytelnika do zagadnienia efektów algebraicznych i uchwytów. Zostają one opisane w teoretyczny, a dzięki wykorzystaniu języka programowania Helium, także w praktyczny sposób. Zwieńczeniem pracy jest powtórzenie implementacyjnych wyników Mokhov'a i innych korzystając z języka Helium. W konsekwencji możliwe jest porównanie obu implementacji oraz zaobserwowanie jak wygląda programowanie z efektami algebraicznymi i uchwytami.}
-\englishabstract{Algebraic effects and handlers are a new way to deal with side effects. Build systems, despite being advanced computer programs that use sophisticated algorithms, are rarely the object of study. Recently, this has changed due to Mokhov et al. who in ,,Build systems à la carte'' approach the subject in an abstract way, thus introducing categorization and implementation of build system using programming language Haskell.
+\englishabstract{Algebraic effects and handlers are a new way to deal with side effects. Build systems, despite being advanced computer programs that use sophisticated algorithms, are rarely the object of study. Recently, this has changed due to Mokhov et al. who in \BSaLC{} approach the subject in an abstract way, thus introducing categorization and implementation of build system using programming language Haskell.
 The reader is introduced to the algebraic effects and handlers in an accessible way by presenting the subject both in theory and practice -- the latter by using the programming language Helium. The crowning part of the paper is implementation of concepts introduced by Mokhov et al. in Helium. As the result, it is possible to compare those two implementations, and to see how programming with algebraic effects and handlers looks like.}
 % w pracach wielu autorow nazwiska mozna oddzielic poleceniem \and
 \author         {Jakub Mendyk}
@@ -108,9 +112,6 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
   language=Haleff,
   basicstyle=\scriptsize\ttfamily
 }
-
-\newcommand{\BSaLC}{,,Build systems {\`a} la carte''}
-\newcommand{\BSaLCTP}{,,Build systems {\`a} la carte: Theory and practice''}
 
 \newcommand{\haskinl}[1]{\lstinline[style=haskell-inl]{#1}}
 \newcommand{\helinl}[1]{\lstinline[style=Haleff-inl]{#1}}
